--- a/Web/index.html
+++ b/Web/index.html
@@ -3,8 +3,43 @@
 <head>
     <title>PassPhrase Generator</title>
 	<meta charset="utf-8" />
+    <script src="Scripts/jquery-1.10.2.js"></script>
+    
+    <script src="Scripts/bootstrap.js"></script>
+    <script src="Scripts/angular.js"></script>
+    <script src="app.js"></script>
+    <link href="Styles/bootstrap.css" rel="stylesheet" />
 </head>
 <body>
     <h1>Passphrase Generator</h1>
+
+    <div ng-app="passphraseApp" ng-controller="generateController">
+       
+                <div class="row">
+                    <label>entropia: </label><input type="number" id="enthropy_input" min="20" max="1000" />
+                </div>
+                <div class="row">
+                    <a class="btn btn-default" href="#" ng-click="genEnthropy()"><i class="fa fa-check fa-lg"></i> generate</a>
+                </div>
+
+                <div class="row">
+                    <label>binarny retazec: </label><input type="text" id="bits_input" />
+                </div>
+                <div class="row">
+                    <a class="btn btn-default" href="#" ng-click="genBinary()"><i class="fa fa-check fa-lg"></i> generate</a>
+                </div>
+
+                <div class="row">
+                    <label>veta: </label><input type="text" id="sentence_input" />
+                </div>
+                <div class="row">
+                    <a class="btn btn-default" href="#" ng-click="genSentence()"><i class="fa fa-check fa-lg"></i> generate</a>
+                </div>
+
+                <div id="texter">
+
+                </div>
+
+    </div>
 </body>
 </html>
